<resources>
    <string name="app_name">Criminallntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">solved</string>
    <string name="list_crime_title">Crime Title</string>
    <string name="list_crime_date">Crime Date</string>
    <string name="date_picker_title">Date of crime</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_repoty_subject">CrimeinalIntent</string>
    <string name="send_report">Send crime report via</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="crime_suspect_text">Choose Crime Report</string>
    <string name="crime_report_text">send crime report</string>

</resources>
